<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.LogRegActivity"
    android:orientation="vertical">

    <!--login-->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_list"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:clipToPadding="false"
        android:visibility="visible"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:paddingTop="25dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">

                <TextView
                    android:id="@+id/txtTitle"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Registration"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"/>

                <!--username-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    android:padding="10dp"
                    tools:layout_editor_absoluteX="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTxtUsername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!--Address-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutAddress"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTxtAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
                <!--Password-->
                <com.google.android.material.textfield.TextInputLayout
                    android:padding="10dp"
                    android:id="@+id/textInputLayoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    tools:layout_editor_absoluteX="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTxtPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <!--Con Password-->
                <com.google.android.material.textfield.TextInputLayout
                    android:padding="10dp"
                    android:id="@+id/textInputLayoutConPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    tools:layout_editor_absoluteX="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTxtConPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/btnLoginReg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <!--login-->



</androidx.constraintlayout.widget.ConstraintLayout>