<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".view.MainActivity">
    <!--data loading progress-->
    <ProgressBar
        android:id="@+id/temperBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sweepTemperList"
        app:layout_constraintEnd_toEndOf="@+id/sweepTemperList"
        app:layout_constraintStart_toStartOf="@+id/sweepTemperList"
        app:layout_constraintTop_toTopOf="@+id/sweepTemperList"
        app:layout_constraintVertical_bias="0.36" />
    <!--data loading progress-->
    <!--Swipe Refresh the Layout-->
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/sweepTemperList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp">
        <androidx.recyclerview.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/temperRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <!--Swipe Refresh the Layout-->
    <!--Card view for Filter Button -->
    <androidx.cardview.widget.CardView
        android:id="@+id/temperCardViewFilter"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_filter_button"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/sweepTemperList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/filters"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.cardview.widget.CardView>
    <!--Card view for Filter Button -->
    <!--bottom Contend-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_filter_button"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="12dp">
        <!--button for map view-->
        <Button
            android:id="@+id/btnOpenMapView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/map_view"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
        <!--button for map view-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:baselineAligned="false">
            <!--Register button-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="12dp">

                    <TextView
                        android:id="@+id/txtRegistration"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_bg_reg"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/schrijf_je_in"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <!--Register button-->
            <!--login button-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="12dp">
                    <TextView
                        android:id="@+id/txtLogin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/btn_bg_log"
                        android:gravity="center"
                        android:padding="20dp"
                        android:text="@string/inloggen"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <!--login button-->
        </LinearLayout>
    </LinearLayout>
    <!--bottom Contend-->
</androidx.constraintlayout.widget.ConstraintLayout>